# pytorch_register_op_minimal

./: .gitignore  CMakeLists.txt  MANIFEST.in  build.bat  c_source.cpp  setup.py
pytorch_register_op_minimal/: __init__.py
